02 May 2007
   [Alexey]
   - New KVS functions: $serialize and $unserialize to deal with JSON-serialized strings
   
16 Apr 2007
   [Noldor] (with the input from Pragma and Iakko)
   - Iakko's notifier is back. New in this version:
     1) QT4 compatible (on win and macos it is uses fast setWindowOpacity effect instead internal notifier blend())
	 2) Added Option to disable fadein/out effect useful on slow machine (need test)
	 3) Fixed strange crash on QT4 and some minor bug in show/hide event. (it is a trick... need to debug)
	 This a w.i.p. and need some test on linux.
	 
12 Apr 2007
   [TheXception]
   - Added $system.call to call functions of dll/so files via kvs.

10 Apr 2007
   [Alexey]
   - Configurable avatar scaling on load
   - Human-redable file sized on dcc transfers
   
12 Mar 2007
   [Alexey]
   - Added support for remote dns on socks5 proxy
   - Added option to configure identd output mode

06 Mar 2007
   [Pragma]
   - Added svg and generated png icons for kvs,kvc,kvt and kva files.
     Added the KDE mimetypes too.
   - Some fixes for Qt4 support

26 Feb 2007
   [Alexey]
   - Added Export/Import feature to channel list module
   
25 Feb 2007
   [Alexey]
   - Repainted reuser list
   - Added search field for mask editors
   
24 Feb 2007
   [Noldor]
   - New QT4 win compiling projects: still unusable... kvilib and kvirc compile but only in release;
     you need to compile qt libraries by yourself then try to compile kvilib and kvirc (use COMPILE_USE_QT4 in kvi_wincfg.h).
     Some module compile without problem... others need to be ported. 

20 Feb 2007
   [Alexey]
   - Completely reworked ignore system
   - Implemented reguser match caching
   - Implemented custom color for registered user caching
   [Pragma]
   - Yet more Qt4 port.
     - We now require Qt >= 4.2.2 for Qt4 support to work. Older 4.x versions
       have bugs that can't be worked around and tend to crash kvirc
       in various circumstances (including displaying tooltips).