@@ -1,3 +1,7 @@
+02 May 2007 - 12 March 2008
+   [KVIrc Development Team]
+   - A lot of changes documented in the svn log. See http://svn.kvirc.de/kvirc/ for the timeline.
+
 02 May 2007
    [Alexey]
    - New KVS functions: $serialize and $unserialize to deal with JSON-serialized strings
